# myautoresearch

./: .gitignore  README.md  action-plan.md  game.py  play.py  prepare.py  program.md  pyproject.toml  replay.py  train.py
data/: results.tsv
docs/: 1M-update-history.md  L4-performance-analysis.md  caveats.md  performance_baseline.md  program.md  sample_report.md  sample_report_agent.json
framework/: acquisition.py  acquisition_policy.py  analyze.py  branch.py  branch_policy.py  index.py  objective_profile.py  pareto_plot.py  prepare.py  prepare_template.py  program.md  promote.py  search_space.py  selector.py  selector_policy.py  stage_policy.py  sweep.py  tracker.py  train.py  tui.py
scripts/: v21_1_replay_benchmark.py  v21_smoke_chain.py
src/: analyze.py  play.py  prepare.py  replay.py  sweep.py  tracker.py  train.py  tui.py
tests/: __init__.py  mock_train.py  test_acquisition_engine.py  test_acquisition_policy.py  test_acquisition_report.py  test_branch_cli.py  test_branch_db.py  test_branch_policy.py  test_campaign_cli.py  test_campaign_db.py  test_floorplan_checker_domain.py  test_fx_spot_domain.py  test_fx_v23_workspace.py  test_objective_profile.py  test_promotion_cli.py  test_promotion_db.py  test_recommend_cli.py  test_recommendation_db.py  test_recommendation_execution.py  test_recommendation_report.py  test_run_metrics_pareto.py  test_search_space.py  test_selector_engine.py  test_selector_policy.py  test_spot_trader_domain.py  test_spot_trader_v23_workspace.py  test_stage_policy.py  test_sweep_dynamic.py  test_trajectory_report.py
(+213 files in other folders)
