[project]
name = "mag-gomoku"
version = "0.2.0"
description = "Gomoku AI trained via autoresearch loop on Apple Silicon (MLX)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "mlx>=0.22.0",
    "numpy>=1.26.0",
    "pygame>=2.5.0",
    "uvicorn>=0.30.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["framework", "domains"]
